# NIH-crawl

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  toy_corpus_500.parquet
notebooks/: 00_sanity.ipynb  01_build_corpus.ipynb  02_corpus_overview.ipynb  03_embeddings.ipynb  04_topic_baseline.ipynb  05_topic_time_series.ipynb  06_shift_detection.ipynb  07_case_studies.ipynb
src/nih/: io.py  paths.py  text.py  viz.py
tutorials/W0D1_PythonWorkshop1/student/: W0D1_Tutorial1.ipynb
